# markdoc

./: .gitignore  Makefile  README.md  auth_config.yaml.template  config.toml.template  pyproject.toml
.devcontainer/: devcontainer.json
.streamlit/: secrets.toml.template
markdoc/: __init__.py  app.py  auth.py  config.py  crawler.py  task_manager.py
markdoc/database/: __init__.py  engine.py  models.py
markdoc/pages/: 1_create_task.py  2_task_detail.py  3_browse_docs.py
markdoc/utils/: __init__.py  jina_utils.py
